[project]
name = "objectiondetectionannotationconverter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy==2.4.1",
    "opencv-python==4.13.0.90",
    "pycocotools==2.0.11",
    "huggingface-hub",
    "torch==2.10.0+cu118",
    "torchvision==0.25.0+cu118",
    "tqdm==4.67.1",
    "transformers",
]
